[gd_scene load_steps=5 format=2]

[ext_resource path="res://materials/kenney_red.tres" type="Material" id=1]
[ext_resource path="res://DropArea.gd" type="Script" id=2]
[ext_resource path="res://addons/kenney_ui_audio/switch2.wav" type="AudioStream" id=3]

[sub_resource type="BoxShape" id=1]
extents = Vector3( 1, 3, 2 )

[node name="DropArea" type="Area"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -7, -1.73844, -4 )
script = ExtResource( 2 )

[node name="drop zone" type="CSGBox" parent="."]
height = 0.5
depth = 4.0
material = ExtResource( 1 )

[node name="CollisionShape" type="CollisionShape" parent="."]
shape = SubResource( 1 )

[node name="Timer" type="Timer" parent="."]
wait_time = 2.0

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 3 )

[connection signal="body_entered" from="." to="." method="_on_DropArea_body_entered"]
[connection signal="body_exited" from="." to="." method="_on_DropArea_body_exited"]
[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]
